--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -1,4 +1,168 @@
 {
-  "home": "الصفحة الرئيسية",
-  " From cozy sofas to elegant dining sets, discover furniture that turns your house into a home. Let me know if you d like a different tone or style!": "من الأرائك المريحة إلى طاولات الطعام الأنيقة، اكتشفوا تشكيلة أثاث مميزة تجعل من منزلكم ملاذاً مثالياً. أخبروني إن كنتم ترغبون بتغيير نبرة أو أسلوب النص."
+  "header": {
+    "customize": "هل ترغب بتصميمك الخاص؟",
+    "showrooms": "صالات العرض",
+    "helpCenter": "مركز المساعدة"
+  },
+  "navbar": {
+    "home": "الرئيسية",
+    "shop": "المتجر",
+    "about": "عن الشركة",
+    "blogs": "المدونة",
+    "contact": "اتصل بنا",
+    "designers": "المصممون",
+    "userName": "اسم المستخدم",
+    "userProfile": "ملف المستخدم",
+    "settings": "الإعدادات",
+    "logout": "تسجيل الخروج",
+    "language": "اللغة"
+  },
+  "homeHero": {
+    "title": "الأناقة تلتقي بالراحة — أثاث مصمم خصيصًا لك",
+    "desc": "من الأرائك المريحة إلى أطقم الطعام الأنيقة، اكتشف الأثاث الذي يحوّل منزلك إلى بيت دافئ. أخبرنا إذا كنت تفضل أسلوبًا أو نغمة مختلفة!",
+    "shopNow": "تسوق الآن",
+    "customizeOrder": "طلب مخصص"
+  },
+  "experts": {
+    "yearsExperience": "سنة من الخبرة",
+    "openedInCountry": "افتتحنا في البلد",
+    "furnitureSold": "قطع أثاث مباعة",
+    "designsDownloaded": "تصاميم جاهزة تم تحميلها"
+  },
+  "features": {
+    "title": "أكثر من مجرد متجر أثاث – مصدرك للبلوكات المعمارية",
+    "subtitle": "اكتشف مزيجاً فريداً من الأثاث عالي الجودة والموارد المعمارية الأساسية، كلها في مكان واحد.",
+    "premiumTitle": "أثاث فاخر:",
+    "premiumDesc": "اكتشف أثاثاً مصمماً بعناية لكل المساحات.",
+    "blocksTitle": "بلوكات معمارية:",
+    "blocksDesc": "احصل على بلوكات معمارية قابلة للتحميل لمشاريعك التصميمية.",
+    "allInOneTitle": "مصدر شامل:",
+    "allInOneDesc": "ارتقِ بمشاريعك مع الأثاث وأدوات التصميم في مكان واحد."
+  },
+  "mainCategories": {
+    "title": "تصفح كـ",
+    "subtitle": "من التصميمات الداخلية الأنيقة إلى الواجهات الخارجية الملهمة والمشاهد الفنية — تصفح فئاتنا وابحث عن اللمسة المثالية لكل زاوية في منزلك.",
+    "interior": "التصميم الداخلي",
+    "scenes": "المشاهد",
+    "exterior": "التصميم الخارجي"
+  },
+  "choice": {
+    "title": "أفضل مصنع أثاث من اختيارك",
+    "description": "في ArchiLink، نصنع أثاثاً عالي الجودة أنيقاً ومتيناً مصمماً ليرتقي بأي مساحة. من خلال الحرفية المتقنة والمواد الفاخرة، نقدم الراحة والأناقة والوظائف لمنزلك أو عملك. اختر التميز. اختر ArchiLink."
+  },
+  "specificProducts": {
+    "title": "الأكثر مبيعاً",
+    "subtitle": "تم اختيار منتجاتنا الأكثر مبيعاً بعناية من بين أفضل المنتجات في العالم، لنقدم لك الجودة الأولى والثقة المضمونة.",
+    "viewAll": "عرض الكل"
+  },
+  "newProducts": {
+    "title": "تسوق حسب الفئة",
+    "subtitle": "احصل على القطعة المثالية لكل مساحة — غرفة المعيشة، الطعام، النوم وأكثر — مع عروض خاصة الآن!",
+    "checkAll": "عرض الكل",
+    "categories": {
+      "furniture": "الأثاث",
+      "kitchen": "المطبخ",
+      "bathroom": "الحمام",
+      "childroom": "غرفة الأطفال",
+      "streetLighting": "إنارة الشوارع",
+      "decoration": "الديكور",
+      "outdoorFurniture": "أثاث خارجي"
+    }
+  },
+  "customOrder": {
+    "title": "نساعدك في إنشاء تصميم داخلي عصري",
+    "subtitle": "نجعل رؤيتك حقيقة بقطع أنيقة وعملية لخلق مساحة عصرية مثالية.",
+    "box1": {
+      "title": "ألهم مساحتك",
+      "desc": "نحول أفكار التصميم المعاصر إلى واقع، لنحوّل أي غرفة إلى مساحة أنيقة وعملية."
+    },
+    "box2": {
+      "title": "مصمم خصيصًا لك",
+      "desc": "رؤيتك هي دليلنا. نساعدك على ابتكار تصميم شخصي يعكس أسلوبك واحتياجاتك بدقة."
+    },
+    "button": "اصنع تصميمك الخاص"
+  },
+  "recentBlogs": {
+    "title": "المدونة الأخيرة",
+    "subtitle": "استكشف أحدث الأفكار من عالم التصميم الداخلي والخارجي. تقدم لك مدوناتنا الأخيرة نصائح الخبراء، واتجاهات الديكور، وإلهام تصميم المشاهد — كل ذلك في مكان واحد.",
+    "viewAll": "عرض كل المدونات",
+    "posts": {
+      "post1": { "title": "أفكار لأول مرة لمالك المنزل" },
+      "post2": { "title": "أفكار لأول مرة لمالك المنزل" },
+      "post3": { "title": "أفكار لأول مرة لمالك المنزل" }
+    }
+  },
+  "reviews": {
+    "title": "ماذا يقول الناس عنا"
+  },
+  "reviewForm": {
+    "title": "رأيك يهمنا: شارك تقييمك",
+    "placeholder": "تقييمك",
+    "button": "إرسال"
+  },
+  "footer": {
+    "title": "متجر البنات",
+    "pages": "الصفحات",
+    "others": "أخرى",
+    "contactInfo": "معلومات الاتصال",
+    "home": "الرئيسية",
+    "shop": "المتجر",
+    "blogs": "المدونة",
+    "about": "عن الشركة",
+    "terms": "الشروط والأحكام",
+    "privacy": "سياسة الخصوصية",
+    "contact": "اتصل بنا",
+    "rights": "© متجر البنات 2025 - جميع الحقوق محفوظة"
+  },
+  "designer": {
+    "title": "المصممون",
+    "searchPlaceholder": "ابحث عن مصمم ...",
+    "searchAlt": "بحث",
+    "countries": "الدول",
+    "creative": "الإبداع",
+    "noMatches": "لم نتمكن من العثور على مصمم مطابق لبحثك!"
+  },
+  "login": {
+    "welcomeTitle": "سجل دخولك وزين مساحتك",
+    "welcomeDesc": "قم بتسجيل الدخول لاستكشاف مجموعات الأثاث الفاخرة، إدارة طلباتك، وتحقيق حلم منزلك بسهولة وأناقة.",
+    "title": "تسجيل الدخول",
+    "error": "كلمة المرور أو البريد الإلكتروني غير صحيحة",
+    "facebook": "متابعة عبر فيسبوك",
+    "google": "متابعة عبر google",
+    "or": "أو",
+    "email": "البريد الإلكتروني",
+    "password": "كلمة المرور",
+    "show": "عرض",
+    "hide": "إخفاء",
+    "forgot": "نسيت كلمة المرور",
+    "submit": "تسجيل الدخول",
+    "noAccount": "ليس لديك حساب؟",
+    "signup": "إنشاء حساب",
+    "success": "تم تسجيل الدخول بنجاح!"
+  },
+  "signup": {
+    "welcomeTitle": "خطتك تتضمن",
+    "plan": {
+      "projects": "مشاريع وموارد غير محدودة",
+      "templates": "قوالب غير محدودة",
+      "storage": "تخزين غير محدود",
+      "views": "قوائم، لوحات، وعرض التقويم..."
+    },
+    "title": "إنشاء حساب",
+    "error": "كلمة المرور غير متطابقة",
+    "facebook": "متابعة عبر فيسبوك",
+    "google": "متابعة عبر google",
+    "or": "أو",
+    "email": "البريد الإلكتروني",
+    "phone": "رقم الهاتف",
+    "password": "كلمة المرور",
+    "confirmPassword": "تأكيد كلمة المرور",
+    "show": "عرض",
+    "hide": "إخفاء",
+    "forgot": "نسيت كلمة المرور",
+    "submit": "إنشاء حساب",
+    "haveAccount": "هل لديك حساب؟",
+    "login": "تسجيل الدخول",
+    "success": "تم إنشاء الحساب بنجاح!"
+  }
 }
