--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -164,5 +164,9 @@
     "haveAccount": "هل لديك حساب؟",
     "login": "تسجيل الدخول",
     "success": "تم إنشاء الحساب بنجاح!"
+  },
+  "mainCategories": {
+    "interior": "تصميم داخلي",
+    "exterior": "تصميم خارجي"
   }
 }
