--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -313,6 +313,8 @@
     "fileType": "نوع الملف",
     "descriptionTitle": "الوصف ومعلومات أخرى",
     "category": "الفئة",
+    "type": "النوع",
+    "designType": "نوع التصميم",
     "material": "الخامة",
     "style": "النمط",
     "length": "الطول",
@@ -328,6 +330,5 @@
     "yourMessage": "رسالتك",
     "saveInfo": "احفظ اسمي، بريدي الإلكتروني، وموقعي في هذا المتصفح من أجل المرة القادمة التي أعلق فيها.",
     "send": "إرسال"
-
   }
 }
