--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -249,7 +249,7 @@
   },
   "contactForm": {
     "weLoveToHear": "يسعدنا أن نسمع منك",
-    "weLoveToHearDesc":"نحن هنا لمساعدتك! إذا كان لديك أي أسئلة أو ملاحظات أو طلبات، فلا تتردد في التواصل معنا. سيقوم فريقنا بالرد عليك في أقرب وقت ممكن.",
+    "weLoveToHearDesc": "نحن هنا لمساعدتك! إذا كان لديك أي أسئلة أو ملاحظات أو طلبات، فلا تتردد في التواصل معنا. سيقوم فريقنا بالرد عليك في أقرب وقت ممكن.",
     "leaveMessage": "اترك رسالة",
     "leaveMessageDesc": "استخدم النموذج أدناه للتواصل مع فريق المبيعات",
     "addressTitle": "العنوان",
@@ -332,19 +332,20 @@
     "send": "إرسال"
   },
 
-"customizeOrder": {
-"bringIdeaTitle": "حوّل أفكارك إلى واقع",
-"bringIdeaDesc": "اصنع نموذج تصميم مخصص لاحتياجاتك. قم بتخصيص الحقول والتصميم بسهولة لتتناسب مع متطلباتك.",
-"width": "العرض",
-"height": "الارتفاع",
-"length": "الطول",
-"location": "الموقع",
-"locationPlaceholder": "سوريا، حمص، الحمراء",
-"wrappingColor": "لون التغليف",
-"uploadImage": "تحميل صورة",
-"send": "إرسال",
-"popupText": "إذا تم قبول طلبك، ستحصل على <b>$1000 مكافأة</b> وستعتمد تصميمك كمنتج من منتجات الشركة.",
-"cancel": "إلغاء",
-"accept": "قبول"
-}
+  "customizeOrder": {
+    "bringIdeaTitle": "حوّل أفكارك إلى واقع",
+    "bringIdeaDesc": "اصنع نموذج تصميم مخصص لاحتياجاتك. قم بتخصيص الحقول والتصميم بسهولة لتتناسب مع متطلباتك.",
+    "width": "العرض",
+    "height": "الارتفاع",
+    "length": "الطول",
+    "location": "الموقع",
+    "locationPlaceholder": "سوريا، حمص، الحمراء",
+    "wrappingColor": "لون التغليف",
+    "uploadImage": "تحميل صورة",
+    "imageUploaded": "تم تحميل الصورة",
+    "send": "إرسال",
+    "popupText": "إذا تم قبول طلبك، ستحصل على <b>$1000 مكافأة</b> وستعتمد تصميمك كمنتج من منتجات الشركة.",
+    "cancel": "إلغاء",
+    "accept": "قبول"
+  }
 }
