--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -205,13 +205,9 @@
     "amount": "الكمية",
     "total_price": "السعر الإجمالي",
     "return_shopping": "العودة للتسوق",
-    "over_all": "الإجمالي",
-    "sub_total": "المجموع الفرعي",
-    "shipping": "الشحن",
-    "next_step": "الخطوة التالية",
-    "discount": "الخصم",
+    "Location":"الموقع",
     "total": "الإجمالي",
-    "continue_checkout": "متابعة الدفع",
+    "checkout": " الدفع",
     "product_deleted_success": "!!تم حذف المنتج من السلة بنجاح",
     "process_failed": "فشلت العملية!!"
   },
