--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -203,13 +203,9 @@
     "amount": "Amount",
     "total_price": "Total Price",
     "return_shopping": "Return Shopping",
-    "over_all": "Over All",
-    "sub_total": "Sub Total",
-    "shipping": "Shipping",
-    "next_step": "Next step",
-    "discount": "Discount",
+    "Location":"Location",
     "total": "Total",
-    "continue_checkout": "Continue to check out",
+    "checkout": "Check out",
     "product_deleted_success": "Product was deleted from the cart successfully!!",
     "process_failed": "Process failed!!"
   },
