--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -11,6 +11,7 @@
     "blogs": "المدونة",
     "contact": "اتصل بنا",
     "designers": "المصممون",
+    "orders": "الطلبات",
     "userName": "اسم المستخدم",
     "userProfile": "ملف المستخدم",
     "settings": "الإعدادات",
@@ -205,7 +206,7 @@
     "amount": "الكمية",
     "total_price": "السعر الإجمالي",
     "return_shopping": "العودة للتسوق",
-    "Location":"الموقع",
+    "Location": "الموقع",
     "total": "الإجمالي",
     "checkout": " الدفع",
     "product_deleted_success": "!!تم حذف المنتج من السلة بنجاح",
