--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -11,6 +11,7 @@
     "blogs": "Blogs",
     "contact": "Contact Us",
     "designers": "Designers",
+    "orders": "Orders",
     "userName": "User Name",
     "userProfile": "User Profile",
     "settings": "Settings",
@@ -203,7 +204,7 @@
     "amount": "Amount",
     "total_price": "Total Price",
     "return_shopping": "Return Shopping",
-    "Location":"Location",
+    "Location": "Location",
     "total": "Total",
     "checkout": "Check out",
     "product_deleted_success": "Product was deleted from the cart successfully!!",
