updates&comments&&checkout

--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -271,7 +271,7 @@
     "phone": "رقم الهاتف",
     "area": "المنطقة",
     "balance": "الرصيد",
-    "changePasswordBtn": "تغيير كلمة المرور",
+    "changePasswordBtn": "تغيير المعلومات",
     "changePasswordPopupTitle": "تغيير كلمة المرور الخاصة بك",
     "yourEmail": "البريد الإلكتروني الخاص بك",
     "oldPassword": "كلمة المرور القديمة",
