--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -269,7 +269,7 @@
     "phone": "Phone",
     "area": "Area",
     "balance": "Balance",
-    "changePasswordBtn": "Change Password",
+    "changePasswordBtn": "Change Info",
     "changePasswordPopupTitle": "Change Your Password",
     "yourEmail": "Your Email",
     "oldPassword": "Old Password",
